app.json updated and node.svg added

--- a/app.json
+++ b/app.json
@@ -1,11 +1,10 @@
 {
   "name": "contato-list",
   "description": "A REST api with Node.Js application via using AngularJS other frameworks",
-  "repository": "https://git.heroku.com/contato-list.git",
-  "log": "http://contato-list.herokuapp.com/fac_icon.svg",
-  "keyword": [
+  "repository": "https://github.com/LordK1/contato-list.git",
+  "logo": "http://contato-list.herokuapp.com/fac_icon.svg",
+  "keywords": [
     "node",
-    "angularjs",
     "express",
     "static"
   ]
